Fix modal bg on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7532,9 +7532,6 @@ dl {
 .modal .table > tfoot > tr > td {
   border-color: #ddd;
 }
-.modal-backdrop {
-  display: none;
-}
 .modal-content {
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0.95);
@@ -8333,6 +8330,15 @@ ul.shows li .btn {
 }
 ul.shows li .btn:hover {
   color: #ffffff;
+}
+.show-detail {
+  background: url('../images/vidpattern.png') rgba(26, 26, 26, 0.8);
+  background-size: 1px;
+  padding: 10px;
+  min-height: 80px;
+}
+.show-detail small {
+  line-height: 1.21428571465;
 }
 #map-canvas {
   width: 100%;
