--- a/static/less/overrides.less
+++ b/static/less/overrides.less
@@ -94,5 +94,5 @@ dl {
 	}
 }
 .modal-backdrop {
-	display:none;
+
 }
