--- a/static/less/shows.less
+++ b/static/less/shows.less
@@ -48,6 +48,14 @@ ul.shows {
 		}
 	}
 }
+.show-detail {
+	.bg-texture;
+	padding:10px;
+	min-height:80px;
+	small {
+		line-height:@line-height-small;
+	}
+}
 #map-canvas {
 	width:100%;
 	height:300px;
